fix: BLOCK3-6 fixed layouts on mobile

--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -3,7 +3,7 @@
 .modal {
   position: fixed;
   inset: 0;
-  width: 100%;
+  width: 100dvw;
   height: 100dvh;
   display: flex;
   align-items: center;
@@ -23,7 +23,8 @@
     border-radius: 20px;
     padding: 40px;
     overflow: hidden;
-    max-width: 940px;
+    width: 940px;
+    max-width: 90dvw;
     max-height: 768px;
     z-index: 1;
   }
@@ -40,8 +41,19 @@
   }
 }
 
+@media (max-height: 768px){
+  .modal {
+    .content {
+      overflow-y: auto;
+      max-height: 90%;
+    }
+  }
+
+}
+
 @media (max-width: 768px) {
   .modal {
+    align-items: flex-start;
     .backdrop {
       background-color: $bg-color-primary;
       opacity: 1;
@@ -49,9 +61,10 @@
 
     .content {
       overflow-y: auto;
-      max-width: 100%;
-      max-height: 100%;
-      padding: 33px 20px;
+      height: 100dvh;
+      max-width: 100dvw;
+      padding: 30px;
+      scrollbar-gutter: stable;
 
       &::-webkit-scrollbar {
         width: 3px;
@@ -74,3 +87,4 @@
     }
   }
 }
+
