--- a/src/components/select/select.module.scss
+++ b/src/components/select/select.module.scss
@@ -2,7 +2,6 @@
 
 .select {
   position: relative;
-  max-width: 300px;
   .button {
     display: inline-flex;
     width: 100%;
@@ -30,7 +29,6 @@
     left: 0;
     z-index: 1;
     width: 100%;
-    max-width: 300px;
   }
 
   .option {
