--- a/src/modules/main-page-content/components/main-teachers/components/teacher-item/components/teacher-modal-content/teacher-modal-content.module.scss
+++ b/src/modules/main-page-content/components/main-teachers/components/teacher-item/components/teacher-modal-content/teacher-modal-content.module.scss
@@ -29,11 +29,23 @@
   }
 }
 
+
+@media (max-height: 768px){
+  .teacherModalContent {
+    height: auto;
+  }
+
+}
+
 @media (max-width: 768px) {
   .teacherModalContent {
     height: auto;
 
     .loading {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: calc(100dvh - 60px);
       font-size: 18px;
     }
   }
